--- a/src/frontend.scss
+++ b/src/frontend.scss
@@ -1,5 +1,5 @@
 /**
  * Frontend style base
  */
-@import './global.scss';
-@import './scss/frontend/_';
+@import "./global.scss";
+@import "./scss/frontend/_";
