--- a/src/scss/shared/_fonts.scss
+++ b/src/scss/shared/_fonts.scss
@@ -6,13 +6,13 @@
 	font-size: 0.7em;
 }
 .has-medium-font-size {
-	font-size: .85em;
+	font-size: 0.85em;
 }
 .has-normal-font-size {
 	font-size: 1em;
 }
 .has-bigger-font-size {
-	font-size: 1.25em
+	font-size: 1.25em;
 }
 .has-large-font-size {
 	font-size: 1.5em;
