--- a/src/scss/frontend/_pagination.scss
+++ b/src/scss/frontend/_pagination.scss
@@ -3,17 +3,18 @@ aside.pagination {
 	text-align: center;
 	align-items: center;
 
-	ul, li {
+	ul,
+	li {
 		display: inline-block;
 		list-style: none;
 		margin: 0;
 		padding: 0;
 	}
 	.nav-links::before {
-		content: 'Pages: ';
+		content: "Pages: ";
 
 		@include phone() {
-			content: '';
+			content: "";
 		}
 	}
 
@@ -23,17 +24,16 @@ aside.pagination {
 
 	span.page-numbers,
 	a.page-numbers {
-		background: rgba(0,0,0,0.1);
-		padding: .25em .5em;
+		background: rgba(0, 0, 0, 0.1);
+		padding: 0.25em 0.5em;
 
 		&.current {
 			background: var(--#{$PREFIX}-color-brand);
 			color: var(--#{$PREFIX}-color-content-background);
 		}
-
 	}
 	a.page-numbers {
-		background: rgba(0,0,0,0.5);
+		background: rgba(0, 0, 0, 0.5);
 		color: #fff;
 		text-decoration-line: none;
 
@@ -44,5 +44,4 @@ aside.pagination {
 	span.dots {
 		background: none;
 	}
-
 }
