--- a/src/scss/frontend/archives/list.scss
+++ b/src/scss/frontend/archives/list.scss
@@ -21,7 +21,7 @@
 		}
 	}
 
-	&>article {
+	& > article {
 		--flex-gap: 1.5em;
 		--featured-image-width: 250px;
 		display: flex;
@@ -41,7 +41,7 @@
 
 		&::after {
 			display: block;
-			content: '';
+			content: "";
 			height: 1px;
 			width: 100%;
 			border-bottom: 1px solid var(--#{$PREFIX}-color-content-foreground);
@@ -108,15 +108,15 @@
 			font-size: 0.65em;
 			text-align: left;
 
-			>*::after {
+			> *::after {
 				content: " | ";
 				//color: var(--#{$PREFIX}-color-content-foreground);
-				margin: 0 .25em;
+				margin: 0 0.25em;
 				opacity: 0.5;
 			}
 
-			>*:last-child::after {
-				content: '';
+			> *:last-child::after {
+				content: "";
 				display: none;
 			}
 
@@ -133,12 +133,12 @@
 			}
 		}
 
-		.featured-image~header {
-			margin-top: .25em;
+		.featured-image ~ header {
+			margin-top: 0.25em;
 		}
 
-		header~.body {
-			margin-top: .5em;
+		header ~ .body {
+			margin-top: 0.5em;
 		}
 
 		.body {
