--- a/src/scss/frontend/archives/tax-children.scss
+++ b/src/scss/frontend/archives/tax-children.scss
@@ -13,7 +13,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		gap: .5em;
+		gap: 0.5em;
 		flex-wrap: wrap;
 	}
 
@@ -25,18 +25,18 @@
 	a {
 		background-color: var(--#{$PREFIX}-color-content-foreground);
 		color: var(--#{$PREFIX}-color-content-background);
-		border-radius: .2em;
+		border-radius: 0.2em;
 		white-space: nowrap;
 		word-break: break-word;
 		text-decoration-line: none;
-		padding: .75em 1.5em;
+		padding: 0.75em 1.5em;
 		position: relative;
-		transition: all .05s;
+		transition: all 0.05s;
 		opacity: 0.5;
 
 		@include hover {
 			background-color: var(--#{$PREFIX}-color-brand);
-			box-shadow: 0 .05em .25em rgba(0, 0, 0, 0.15);
+			box-shadow: 0 0.05em 0.25em rgba(0, 0, 0, 0.15);
 			text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
 			opacity: 1;
 			transform: scale(1.03);
@@ -61,7 +61,7 @@
 
 	.tax-child-header {
 		font-size: 0.8rem;
-		margin: 0 auto .75rem;
+		margin: 0 auto 0.75rem;
 
 		h3 {
 			margin: 0;
@@ -78,6 +78,6 @@
 	}
 }
 
-.tax-posts~.tax-children {
+.tax-posts ~ .tax-children {
 	margin-top: 2.5rem;
 }
