--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -13,19 +13,20 @@ html {
 	--vh100: calc(var(--vh) * 100);
 }
 
-html,body {
+html,
+body {
 	background-color: var(--#{$PREFIX}-color-site-background);
 	color: var(--#{$PREFIX}-color-content-foreground);
 
 	font-family: var(--#{$PREFIX}-font-font_family);
 	font-size: var(--#{$PREFIX}-font-base_size);
 
-		@include tablet {
-			font-size: calc(var(--#{$PREFIX}-font-base_size) * 0.95);
-		}
-		@include phone {
-			font-size: calc(var(--#{$PREFIX}-font-base_size) * 0.9);
-		}
+	@include tablet {
+		font-size: calc(var(--#{$PREFIX}-font-base_size) * 0.95);
+	}
+	@include phone {
+		font-size: calc(var(--#{$PREFIX}-font-base_size) * 0.9);
+	}
 
 	line-height: var(--#{$PREFIX}-font-base_lineheight);
 }
@@ -34,37 +35,62 @@ body {
 	background-color: var(--#{$PREFIX}-color-content-background);
 }
 
-h1, h2, h3, h4, h5, h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 .edit-post-visual-editor__post-title-wrapper > h1 {
 	display: block;
 	font-size: 1em;
 	font-weight: bold;
 	line-height: 1.1;
-	margin: 0 0 .5em;
+	margin: 0 0 0.5em;
 	padding: 0;
 }
+h1,
+.edit-post-visual-editor__post-title-wrapper > h1 {
+	font-size: 2.5em;
+}
+h2 {
+	font-size: 2.25em;
+}
+h3 {
+	font-size: 1.75em;
+}
+h4 {
+	font-size: 1.5em;
+}
+h6 {
+	font-size: 1.15em;
+}
+
+@include phone {
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		line-height: 1.3;
+	}
 	h1,
 	.edit-post-visual-editor__post-title-wrapper > h1 {
-		font-size: 2.5em;
+		font-size: 2.15em;
 	}
-	h2 { font-size: 2.25em; }
-	h3 { font-size: 1.75em; }
-	h4 { font-size: 1.5em; }
-	h6 { font-size: 1.15em; }
-
-	@include phone {
-		h2, h3, h4, h5, h6 {
-			line-height: 1.3;
-		}
-		h1,
-		.edit-post-visual-editor__post-title-wrapper > h1 {
-			font-size: 2.15em;
-		}
-		h2 { font-size: 2em; }
-		h3 { font-size: 1.5em; }
-		h4 { font-size: 1.15em; }
-		h6 { font-size: 1em; }
+	h2 {
+		font-size: 2em;
 	}
+	h3 {
+		font-size: 1.5em;
+	}
+	h4 {
+		font-size: 1.15em;
+	}
+	h6 {
+		font-size: 1em;
+	}
+}
 
 p {
 	margin-top: 0;
@@ -81,14 +107,16 @@ a {
 	text-underline-position: from-font;
 	outline: 0;
 
-	@include hover{
+	@include hover {
 		color: var(--#{$PREFIX}-color-highlight);
 	}
 	@media (hover: none) {
 		color: var(--#{$PREFIX}-color-brand);
 	}
 
-	img { border: 0; }
+	img {
+		border: 0;
+	}
 }
 
 figure {
@@ -105,9 +133,13 @@ img {
 	object-fit: cover;
 	image-rendering: -webkit-optimize-contrast;
 
-	&:not([src]) { visibility: hidden; }
+	&:not([src]) {
+		visibility: hidden;
+	}
 	// SVGs default to contain
-	&[src*=".svg"] { object-fit: contain }
+	&[src*=".svg"] {
+		object-fit: contain;
+	}
 }
 
 table,
@@ -149,12 +181,16 @@ body > main {
 }
 
 // Images with attribution
-img[data-credit], .has_image[data-credit], figure.wp-block-image, figure.wp-block-video {
+img[data-credit],
+.has_image[data-credit],
+figure.wp-block-image,
+figure.wp-block-video {
 	position: relative;
 	img {
 		display: inherit;
 	}
-	&:after, figcaption {
+	&:after,
+	figcaption {
 		content: attr(data-credit);
 		background-color: var(--#{$PREFIX}-color-brand);
 		color: #fff;
@@ -164,7 +200,7 @@ img[data-credit], .has_image[data-credit], figure.wp-block-image, figure.wp-bloc
 		left: 0;
 		z-index: 2;
 
-		padding: .75em .9em;
+		padding: 0.75em 0.9em;
 		margin: 0;
 
 		font-size: 0.4rem;
@@ -180,23 +216,36 @@ figure.wp-block-video figcaption {
 }
 
 .text-shadow-1 {
-	text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 }
 .text-shadow-2 {
-	text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .text-shadow-3 {
-	text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+	text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
 }
 
 .body,
 body.editor-styles-wrapper {
 	word-break: break-word;
 
-	p, ol, ul, li { margin-bottom: .75em; }
-	li li { margin-bottom: .25em; }
-	p:last-child { margin-bottom: 0; }
-	h2, h3, h4, h5, h6 {
+	p,
+	ol,
+	ul,
+	li {
+		margin-bottom: 0.75em;
+	}
+	li li {
+		margin-bottom: 0.25em;
+	}
+	p:last-child {
+		margin-bottom: 0;
+	}
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
 		font-family: var(--#{$PREFIX}-font-header_family);
 	}
 }
