--- a/src/scss/shared/_functions.scss
+++ b/src/scss/shared/_functions.scss
@@ -23,9 +23,13 @@
 			@content;
 		}
 	}
-	@media not all and (hover: none), all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-		&:hover, &:focus, &:active {
-			@content
+	@media not all and (hover: none),
+		all and (-ms-high-contrast: none),
+		(-ms-high-contrast: active) {
+		&:hover,
+		&:focus,
+		&:active {
+			@content;
 		}
 	}
 }
