--- a/src/scss/shared/blocks/_.scss
+++ b/src/scss/shared/blocks/_.scss
@@ -1,3 +1,3 @@
-@import 'wp-block-query';
-@import 'wp-block-query-pagination';
-@import 'wp-block-columns.scss';
+@import "wp-block-query";
+@import "wp-block-query-pagination";
+@import "wp-block-columns.scss";
