--- a/src/scss/frontend/_search.scss
+++ b/src/scss/frontend/_search.scss
@@ -1,43 +1,59 @@
-main.search {
-	.row-container {
-		max-width: 900px;
+.search-form {
+	font-size: 1rem;
+
+	form {
+		margin: 0;
+		padding: 0;
 	}
 
-	header.page_title {
-		text-align: left;
-		margin-bottom: 1em;
-		h1 {
-			font-size: 1.75em;
-			margin-bottom: 0.25em;
-		}
+	.search-inside_wrapper {
+		display: flex;
+		flex: auto;
+		flex-wrap: nowrap;
+		max-width: 100%;
+		padding: 0.15em;
+		border: 1px solid rgba(0, 0, 0, 0.15);
+		background: transparent;
+		transition: background 0.15s;
+	}
+	input[type="search"] {
+		background: transparent;
+		border-radius: 0;
+		border: none;
+		padding: 0 0 0 0.25em;
+		flex-grow: 1;
+		min-width: 3em;
+		font-size: inherit;
+		font-family: inherit;
+		line-height: inherit;
 
-		.search,
-		.search li {
-			list-style: none;
-			margin: 0;
-			padding: 0;
+		&:focus-visible {
+			outline: 0;
 		}
-		.search {
-			input {
-				display: inline-block;
-				background: rgba(0, 0, 0, 0.15);
-				font-size: 1em;
-				line-height: 1;
-				padding: 0.25em 0.5em;
-				border: 0;
-				border-radius: 0.15em;
-				transition: all 0.15s;
+	}
+	button {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 0.25em 0.5em;
+		line-height: 1;
+		background: rgba(0, 0, 0, 0.15);
+		border: 1px solid rgba(0, 0, 0, 0.15);
+		color: #32373c;
+		margin-left: 0.5em;
+		word-break: normal;
+		font-size: inherit;
+		font-family: inherit;
+		cursor: pointer;
 
-				&[type="submit"] {
-					border: 1px solid transparent;
-					background: var(--#{$PREFIX}-color-brand);
-					color: #fff;
-
-					@include hover {
-						background: var(--#{$PREFIX}-color-highlight);
-					}
-				}
-			}
+		@include hover {
+			background: var(--#{$PREFIX}-color-brand, rgba(0, 0, 0, 0.5));
+			color: #fff;
 		}
+	}
+	svg {
+		min-width: 1.5em;
+		min-height: 1.5em;
+		fill: currentColor;
 	}
 }
