--- a/src/scss/frontend/archives/_.scss
+++ b/src/scss/frontend/archives/_.scss
@@ -9,6 +9,8 @@ main.search {
 
 	@import "./tax-children";
 
+	@import "./search";
+
 	/**
 	 * On the blog posts page, page content may be displayed before the archive.
 	 * This definition makes a space between that page content and the archive.
