--- a/src/scss/frontend/archives/search.scss
+++ b/src/scss/frontend/archives/search.scss
@@ -1,21 +1,19 @@
-@at-root main.search {
-	header.page_title {
-		.row-container {
-			display: flex;
-			flex-direction: row;
-			gap: 1.5rem;
-			justify-content: space-between;
-			text-align: left;
+@at-root body.search {
+	.row-container.search-header {
+		display: flex;
+		flex-direction: row;
+		gap: 1.5rem;
+		justify-content: space-between;
+		text-align: left;
 
-			@include phone {
-				flex-direction: column;
-				gap: 1rem;
-			}
+		@include phone {
+			flex-direction: column;
+			gap: 1rem;
+		}
 
-			.prepend {
-				display: block;
-				font-size: 1rem;
-			}
+		.prepend {
+			display: block;
+			font-size: 1rem;
 		}
 	}
 
