--- a/src/scss/frontend/_search.scss
+++ b/src/scss/frontend/_search.scss
@@ -12,9 +12,27 @@
 		flex-wrap: nowrap;
 		max-width: 100%;
 		padding: 0.15em;
-		border: 1px solid rgba(0, 0, 0, 0.15);
+		border: 1px solid rgba(0, 0, 0, 0.25);
 		border-radius: 2px;
 		background: var(--#{$PREFIX}-color-content-background);
+	}
+	&.compact-password-form {
+		display: flex;
+		justify-content: center;
+
+		form {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			max-width: 480px;
+			text-align: center;
+			border: 8px solid rgba(0, 0, 0, 0.15);
+			border-radius: 2px;
+			padding: 0.75em 0.5em;
+		}
+		.compact-form--inside_wrapper {
+			width: 32ch;
+		}
 	}
 	input {
 		background: transparent;
