add collapse classes for query block columns

--- a/src/scss/frontend/_.scss
+++ b/src/scss/frontend/_.scss
@@ -41,6 +41,8 @@ body.disable_bottom_padding > main {
 
 .page_title {
 	padding-top: 1rem;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 	text-align: center;
 
 	&.has-header-background {
