--- a/src/scss/backend/_.scss
+++ b/src/scss/backend/_.scss
@@ -24,3 +24,11 @@ h6 {
 body {
 	padding: 0 1rem;
 }
+
+.wp-block-image .components-resizable-box__container img[src*=".svg"],
+figure img[src*=".svg"] {
+	max-width: 100%;
+	max-height: 100%;
+	width: 100%;
+	object-fit: contain;
+}
