--- a/src/scss/shared/_wpcore.scss
+++ b/src/scss/shared/_wpcore.scss
@@ -108,13 +108,13 @@ a img.aligncenter {
 	margin-left: calc(50% - 50vw) !important;
 	margin-right: calc(50% - 50vw) !important;
 	max-width: 100vw;
-	width: 100vw;
+	width: auto;
 }
 .alignwide {
 	margin-left: -1em !important;
 	margin-right: -1em !important;
 	max-width: 100vw !important;
-	width: calc(#{$width-max} + 2em) !important;
+	//width: calc(#{$width-max} + 2em) !important;
 }
 
 [data-align="center"] {
