--- a/src/scss/frontend/_.scss
+++ b/src/scss/frontend/_.scss
@@ -10,6 +10,12 @@
 	box-sizing: border-box;
 }
 
+*[id],
+a[name],
+.wp-block-query {
+	scroll-margin-top: calc(var(--cmls_base-masthead-height, 8vh) + 1rem);
+}
+
 html,
 body {
 	margin: 0;
@@ -101,7 +107,7 @@ article {
 .cmls-anchor {
 	display: block;
 	position: relative;
-	top: calc((var(--#{$PREFIX}-masthead-height) * -1) - 1em);
+	scroll-margin-top: calc(var(--#{$PREFIX}-masthead-height, 8vh) - 1em);
 	visibility: hidden;
 }
 
