added filter for superscripting registration marks in titles and term names

--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -168,6 +168,11 @@ img {
 	}
 }
 
+sup.r {
+	font-size: .5em;
+	vertical-align: super;
+}
+
 table,
 .wp-block-table {
 	border-collapse: collapse;
