--- a/src/scss/shared/blocks/wp-block-query.scss
+++ b/src/scss/shared/blocks/wp-block-query.scss
@@ -117,5 +117,9 @@
 		& .is-flex-container.collapse-2 {
 			--card-width: 50%;
 		}
+		&.collapse-3 .is-flex-container,
+		& .is-flex-container.collapse-2 {
+			--card-width: 33.3333333333%;
+		}
 	}
 }
