--- a/src/scss/shared/_social-links.scss
+++ b/src/scss/shared/_social-links.scss
@@ -55,7 +55,7 @@
 			--icon: url("images/facebook.svg");
 		}
 
-		&[href*="githim.com"i],
+		&[href*="github.com"i],
 		&[aria-label*="github"i] {
 			--icon: url("images/github.svg");
 		}
