fix body content overlapping footer

--- a/src/scss/frontend/_.scss
+++ b/src/scss/frontend/_.scss
@@ -13,7 +13,10 @@
 *[id],
 a[name],
 .wp-block-query {
-	scroll-margin-top: calc(var(--cmls_base-masthead-height, 8vh) + 1rem + var(--cmls_base-extra-scroll-margin-top, 0px));
+	scroll-margin-top: calc(
+		var(--cmls_base-masthead-height, 8vh) + 1rem +
+			var(--cmls_base-extra-scroll-margin-top, 0px)
+	);
 }
 
 html,
@@ -33,14 +36,14 @@ body > main {
 	overflow: visible;
 
 	padding: 0 0 2em;
-	top: var(--cmls_base-masthead-height);
+	margin-top: var(--cmls_base-masthead-height);
 
 	.row-container {
 		padding: 0 1em;
 	}
 }
 body.begin_under_masthead > main {
-	padding-top: 0;
+	margin-top: 0;
 }
 body.disable_bottom_padding > main {
 	padding-bottom: 0;
