--- a/src/scss/shared/mixins/cards.scss
+++ b/src/scss/shared/mixins/cards.scss
@@ -20,8 +20,8 @@
 	position: relative;
 	z-index: 1;
 
-	border-radius: 0.3em;
-	box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0), 0 0.05em 1em rgba(0, 0, 0, 0.14);
+	border-radius: 0.25em;
+	box-shadow: 0 0.05em 1em rgba(0, 0, 0, 0.14);
 	overflow: hidden;
 
 	&:focus-within,
@@ -33,8 +33,8 @@
 	& > a {
 		@include hover {
 			transform: scale(1.03);
-			box-shadow: 0 0 1px 0 var(--hover-outline-color),
-				0 0 1.5em rgba(0, 0, 0, 0.2);
+			outline: 1px solid var(--hover-outline-color);
+			box-shadow: 0 0 1.5em rgba(0, 0, 0, 0.2);
 			z-index: 2;
 		}
 	}
