--- a/src/scss/frontend/masthead/_menu.scss
+++ b/src/scss/frontend/masthead/_menu.scss
@@ -74,22 +74,20 @@
 			font-size: 0.6em;
 			opacity: 0.8;
 		}
-
 	}
 
 	.password-protected > a::before {
 		display: inline-block;
-		content: '\1F512\00FE0E';
+		content: "\1F512\00FE0E";
 		color: transparent;
 		text-shadow: 0 0 1px var(--#{$PREFIX}-color-main_menu-foreground);
-		margin-right: .5em;
+		margin-right: 0.5em;
 	}
-
 
 	body.menu-active & {
 		max-height: calc(
-			var(--vh100) - var(--#{$PREFIX}-masthead-height) -
-				var(--wp_admin_bar_height)
+			var(--vh100, 100vh) - var(--#{$PREFIX}-masthead-height, 8vh) -
+				var(--wp_admin_bar_height, 0px)
 		);
 		transition-delay: 0s;
 		visibility: visible;
