--- a/src/scss/frontend/_pagination.scss
+++ b/src/scss/frontend/_pagination.scss
@@ -25,20 +25,22 @@ aside.pagination {
 	span.page-numbers,
 	a.page-numbers {
 		background: rgba(0, 0, 0, 0.1);
+		border-radius: 2px;
 		padding: 0.25em 0.5em;
 
 		&.current {
-			background: var(--#{$PREFIX}-color-brand);
-			color: var(--#{$PREFIX}-color-content-background);
+			background: transparent;
+			color: var(--#{$PREFIX}-color-brand);
+			box-shadow: inset 0 0 0 1px var(--#{$PREFIX}-color-brand);
 		}
 	}
 	a.page-numbers {
-		background: rgba(0, 0, 0, 0.5);
+		background: rgba(0, 0, 0, 0.7);
 		color: #fff;
 		text-decoration-line: none;
 
 		@include hover {
-			background: #000;
+			background: var(--#{$PREFIX}-color-brand);
 		}
 	}
 	span.dots {
