--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 /**
  * Theme Name:        CMLS Base Wordpress Theme
  * Theme URI:         https://github.com/cumulus-digital/wp-cmls-base
- * Version:           1.5.14
- * Requires at least: 5.9
+ * Version:           1.6.0
+ * Requires at least: 6.0
  * Requires PHP:      7.2
  * Description:       Base wordpress theme for CMLS sites. Provides a ready-to-go, customizable website shell for use with the Gutenberg block editor.
  * Author:            Daniel Vena
  * Author URI:        cumulusmedia.com
  * GitHub Theme URI:  cumulus-digital/wp-cmls-base
  * License:           UNLICENSED
+ * Requires Plugins:  advanced-custom-fields, safe-svg
  */
