--- a/src/scss/frontend/_.scss
+++ b/src/scss/frontend/_.scss
@@ -112,6 +112,15 @@ article {
 		}
 	}
 }
+// blog and press post bodys
+main.single {
+	article.type-post {
+		.body {
+			//font-family: Arial, Helvetica, sans-serif;
+			font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+		}
+	}
+}
 
 .cmls-anchor {
 	display: block;
