--- a/src/scss/frontend/_.scss
+++ b/src/scss/frontend/_.scss
@@ -115,6 +115,7 @@ article {
 // blog and press post bodys
 main.single {
 	article.type-post {
+		.page_title-meta,
 		.body {
 			//font-family: Arial, Helvetica, sans-serif;
 			font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
