--- a/src/scss/shared/_.scss
+++ b/src/scss/shared/_.scss
@@ -2,6 +2,7 @@ $width-max: 1200px;
 $width-large: 1030px;
 $width-medium: 820px;
 $width-small: 640px;
+$system-font: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
 
 //@import "_variables";
 @import "_functions";
