--- a/src/scss/frontend/_.scss
+++ b/src/scss/frontend/_.scss
@@ -113,15 +113,14 @@ article {
 	}
 }
 // blog and press post bodys
-main.single {
-	article.type-post {
-		.page_title-meta,
-		.body {
-			//font-family: Arial, Helvetica, sans-serif;
-			font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-		}
+main.single article.type-post {
+	.page_title-meta,
+	.body {
+		//font-family: Arial, Helvetica, sans-serif;
+		font-family: $system-font;
 	}
 }
+
 
 .cmls-anchor {
 	display: block;
