--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -22,6 +22,11 @@ body {
 	background-color: var(--#{$PREFIX}-color-site-background);
 	color: var(--#{$PREFIX}-color-content-foreground);
 
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+}
+
+body {
+	background-color: var(--#{$PREFIX}-color-content-background);
 	font-family: var(--#{$PREFIX}-font-font_family);
 	font-size: var(--#{$PREFIX}-font-base_size);
 	-webkit-font-smoothing: antialiased;
@@ -35,10 +40,6 @@ body {
 	}
 
 	line-height: var(--#{$PREFIX}-font-base_lineheight);
-}
-
-body {
-	background-color: var(--#{$PREFIX}-color-content-background);
 }
 
 h1,
