--- a/src/scss/frontend/footer/_.scss
+++ b/src/scss/frontend/footer/_.scss
@@ -52,9 +52,10 @@ body > footer {
 		}
 	}
 
-	a {
+	a, li.ot-sdk-show-settings {
 		color: inherit;
 		text-decoration-line: none;
+		cursor: pointer;
 
 		@include hover {
 			color: var(--#{$PREFIX}-color-highlight);
